fixed flex alignments not working in chrome

--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -310,8 +310,8 @@ nav:hover .Title {
 
 .videoTitleButtons {
     display: inline-flex;
-    align-items: start;
-    justify-content: right;
+    align-items: flex-start;
+    justify-content: flex-end;
     width: 220px;
     height: 100%;
     padding: -3px;
@@ -326,7 +326,7 @@ nav:hover .Title {
     flex: 1 1 auto;
     display: inline-flex;
     width: 100%;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .videoTitleButton {
